<resources>
    <string name="app_name">OriontekDemo</string>
    <string name="home_screen">Oriontek Demo - User List</string>
    <string name="add_user_screen">Oriontek Demo - Add/Edit User</string>
    <string name="user_details_screen">Oriontek Demo - User Details</string>
    <string name="add_address_screen">Oriontek Demo - Add Address</string>

    <string name="user_full_name">John Appleseed</string>
    <string name="user_first_name">John</string>
    <string name="user_last_name">Appleseed</string>
    <string name="user_email">jappleseed@email.com</string>
    <string name="user_phone_number">0123456789</string>
    <string name="add_user">Add User</string>
    <string name="user_options">User Options</string>
    <string name="add_address">Add Address</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="save_user">Save User</string>
    <string name="input_error">All fields are required!</string>
    <string name="user_added">User added!</string>

    <string name="address_line1">Address line 1</string>
    <string name="address_line2">Address line 2</string>
    <string name="address_city">City</string>
    <string name="address_zip_code">Zip code</string>
    <string name="save_address">Save Address</string>
    <string name="address_added">Address added!</string>

    <string name="user_deleted">User deleted!</string>
</resources>