<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28df99"
    tools:context=".ui.UserDetails">

    <LinearLayout
        android:id="@+id/user_details_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_guideline"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_full_name"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_phone_number"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent=".20"
        android:orientation="horizontal"/>

    <LinearLayout
        android:id="@+id/user_addresses_list_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/bottom_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:visibility="visible"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_addresses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/user_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/user_options"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_address_add_white_18dp"
            fab:fab_size="mini"
            fab:fab_label="@string/add_address" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/edit_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_white_18dp"
            fab:fab_size="mini"
            fab:fab_label="@string/edit_user" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/delete_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_remove_white_18dp"
            fab:fab_size="mini"
            fab:fab_label="@string/delete_user" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.constraintlayout.widget.ConstraintLayout>